Added an image and few more elements

--- a/Test.html
+++ b/Test.html
@@ -1,3 +1,14 @@
-<h1>Hey! I'm a Heading Text </h1>
-<p>And I'm a paragraph element</p>
-<a href="https://clevergraphicdesigns.com" target="_blank" title="Let's go to Clever Graphic Designs' website">Click me! I'm a link</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title> Test Page</title>
+</head>
+<body>
+	<h1>Hey! I'm a Heading Text </h1>
+	<p>And I'm a <b>paragraph</b> element</p>
+	<p>My name is: <br>
+	Clebby BadassMum</p>
+	<a href="https://clevergraphicdesigns.com" target="_blank" title="Let's go to Clever Graphic Designs' website">Click me! I'm a link</a>
+	<img src="img/Cleb.jpg">
+</body>
+</html>
