Changed image to a puppy

--- a/Test.html
+++ b/Test.html
@@ -7,8 +7,8 @@
 	<h1>Hey! I'm a Heading Text </h1>
 	<p>And I'm a <b>paragraph</b> element</p>
 	<p>My name is: <br>
-	Clebby BadassMum</p>
+	Cutie Pup</p>
 	<a href="https://clevergraphicdesigns.com" target="_blank" title="Let's go to Clever Graphic Designs' website">Click me! I'm a link</a>
-	<img src="img/Cleb.jpg">
+	<img src="img/pup.jpeg">
 </body>
 </html>
