Wrote the CSS for our Character's website and changed some html

--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <title>Black Widow</title>
 <link rel="icon" href="img/Blackwidowhero.jpeg">
+<link href="https://fonts.googleapis.com/css2?family=Alegreya:wght@900&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="hero.css">
 </head>
 
 <body>
@@ -39,9 +41,11 @@
 	</main>
 	
 <!--	Footer Element-->
-	<foo>
+	<footer>
 		<p>Site Created by LiboBam. 
 			&copy;Cledb </p>
-	</foo>
+	</footer>
+	
 </body>
+
 </html>
